Added separated view controller for scroll layout guide case. Fix some things.

--- a/Example/CGLayout/Base.lproj/Main.storyboard
+++ b/Example/CGLayout/Base.lproj/Main.storyboard
@@ -98,6 +98,26 @@
                                             <segue destination="ZU1-7l-ATU" kind="show" id="150-lR-ZVI"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="oqO-ab-ePB" style="IBUITableViewCellStyleDefault" id="JPn-CX-Ol4">
+                                        <rect key="frame" x="0.0" y="132" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JPn-CX-Ol4" id="Auv-ju-Hjs">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="ScrollLayoutGuide" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="oqO-ab-ePB">
+                                                    <rect key="frame" x="15" y="0.0" width="345" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="KNl-zj-qPe" kind="show" id="HrR-cf-DHi"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -208,6 +228,24 @@ TRACK</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xxq-su-SCb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1400.8" y="60.719640179910051"/>
+        </scene>
+        <!--Scroll Layout View Controller-->
+        <scene sceneID="aXp-2t-de7">
+            <objects>
+                <viewController id="KNl-zj-qPe" customClass="ScrollLayoutViewController" customModule="CGLayout_Example" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="hoj-vd-IgP"/>
+                        <viewControllerLayoutGuide type="bottom" id="uKM-2R-FSb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="6vi-zU-dwL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eCs-ph-dPF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="604" y="783"/>
         </scene>
         <!--Table View Controller-->
         <scene sceneID="LxR-JL-fA0">
